completing implementation of ThreeSum and moving to Java 11